# tabularium

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  config.toml.example  justfile  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
Formula/: tabularium.rb
docs/: AI-Agents.md  authentication.md  chat-mode.md  curl-examples.md  json-rpc-methods.md  math-formulas.md  rest-api.md
exported/kb/: make-deb-howto
exported/tabularium/meetings/: chat-history  debs  descs  drop-legacy-categories  fstree  ls-t  mcp  minors  misc  searching  systemd
make-deb/: build.sh  config.toml.default
make-deb/server/: postinst  postrm  prerm
scripts/: brew-install.sh  ci-test.sh  generate-homebrew-formula.sh  homebrew-formula.rb.in  workspace_version.py
systemd/: tabularium-server.service
tabularium/: Cargo.toml
tabularium-cli/: Cargo.toml
tabularium-cli/src/: chat_markdown.rs  chat_tui.rs  execute.rs  main.rs  render.rs  shell.rs  shell_path.rs
tabularium-cli/tests/: tail_follow_interrupt.rs
tabularium-server/: Cargo.toml
tabularium-server/res/mcp/: help.txt
tabularium-server/src/: auth.rs  config.rs  embedded_ui.rs  jwt_assertion.rs  lib.rs  main.rs  mcp.rs  multipart_body.rs  rpc_preview.rs  test_payload.rs  web.rs  ws_doc.rs
tabularium-server/tests/: acl_http.rs  acl_ops_http.rs  crud_roundtrip.rs  deep_paths.rs  error_cases.rs  force_guard.rs  http_smoke.rs  mcp_full_gate.rs  name_validation.rs  oidc_assertion_http.rs  rest_content_types.rs  revision_cas.rs  rpc_codes.rs  rpc_path_corpus.rs  rpc_paths_normalization.rs  rpc_test.rs  search_with_data.rs  text_ops.rs  wait.rs  ws_doc.rs
tabularium-server/tests/common/: mod.rs
tabularium/src/: acl.rs  client_headers.rs  error.rs  jsonrpc_codes.rs  lib.rs  resource_path.rs  text_lines.rs  validation.rs
tabularium/src/db/: deep_path_tests.rs  entry_kind.rs  meta.rs  mod.rs  ops.rs  search_index.rs  sqlite.rs  storage.rs  time_parse.rs
tabularium/src/rpc/: client.rs  mod.rs
tabularium/src/ws/: client.rs  mod.rs
tests/: __init__.py  conftest.py  helpers.py  test_cli_basic.py  test_cli_find.py  test_cli_import_export.py  test_cli_search.py  test_cli_wait.py  test_force_guard.py  test_gfm_tables.py  test_rest_basic.py  test_rpc_ops.py  test_search.py  test_shell.py  test_validation.py  test_webui_chat_selenium.py  test_webui_editor_selenium.py  test_webui_math_selenium.py  test_webui_search_selenium.py  test_webui_selenium.py
tests/fixtures/: gfm_table_fixture.md
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/_static/fonts/: fonts.css
ui/src/: App.tsx  main.tsx
ui/src/api/: client.ts
ui/src/app/: AppShell.module.scss  AppShell.tsx  AuthShell.module.scss  AuthShell.tsx  appShellContext.ts  pskCookie.ts  trustedAuthContext.tsx  verifyPsk.ts
ui/src/features/chat/: DocumentChatBody.tsx  chatNicknameCookie.ts  documentWsUrl.ts  useDocumentChat.ts
ui/src/features/entries/: EntriesView.module.scss  EntriesView.tsx  FileTree.module.scss  FileTree.tsx  PreviewPane.module.scss  PreviewPane.tsx  SearchResultsList.module.scss  SearchResultsList.tsx  entriesPath.ts  entryModel.ts  highlightSearchTerms.ts
ui/src/features/stats/: StatsChart.tsx  StatsView.module.scss  StatsView.tsx
ui/src/hooks/: useLibraryKeyboard.ts
ui/src/markdown/: gfmSanitize.ts  mathMarkdown.ts
ui/src/styles/: _tokens.scss  global.scss
ui/src/utils/: formatLibrarium.ts
www/: index.html  styles.css
