[package]
name = "tabularium-server"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "HTTP server (REST + JSON-RPC) for tabularium"

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:schemars"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "tabularium-server"
path = "src/main.rs"

[dependencies]
bma-ts = "0.2.6"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
include_dir = "0.7"
multer = "3"
rmcp = { version = "1.3", optional = true, features = ["transport-streamable-http-server"] }
schemars = { version = "1.2", optional = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tabularium = { path = "../tabularium", default-features = false, features = ["db"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7" }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect"] }
